# lead-finder

./: README.md  config.py  database.py  exporter.py  keywords.txt  leads_master.csv  letter_generator.py  mailer.py  main.py  pyproject.toml  requirements.txt  scraper.py  tracker.py
examples/: leads.csv
src/lead_finder/: __init__.py  cli.py  io.py  models.py  service.py
tests/: test_service.py
