[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-finder"
version = "0.1.0"
description = "A lightweight lead filtering and scoring CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lead Finder Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
lead-finder = "lead_finder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
